--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-ua">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>sqrtequation</title>
 </head>
-<body>
-    
+<body> 
+
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
